fix doi tag and link badge alignment

--- a/src/app/shared/components/svg-sprites/svg-sprites.component.scss
+++ b/src/app/shared/components/svg-sprites/svg-sprites.component.scss
@@ -345,7 +345,7 @@
   .link-icon {
     width: 25px;
     height: 25px;
-    margin-top: -2px;
+    margin-top: -5px;
     color: #fff;
   }
 
