--- a/src/app/shared/components/tags/tag-doi/tag-doi.component.scss
+++ b/src/app/shared/components/tags/tag-doi/tag-doi.component.scss
@@ -10,7 +10,7 @@
     line-height: 1.15rem;
     background: #363636;
     color: white;
-    padding: 5px 10px 3px 15px;
+    padding: 6px 10px 3px 15px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-top-right-radius: 0;
@@ -18,6 +18,7 @@
   }
 
   .tag-content {
+    min-height: 29px;
     line-height: 1.3rem;
     display: flex;
     flex-direction: column;
